Align leaderboard contract
